--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         php: ['7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
-        laravel: ['5.5', '5.6', '5.7', '5.8', '6', '7', '8', '9']
+        laravel: ['5.5', '5.6', '5.7', '5.8', '6', '7', '8', '9', '10']
         exclude:
           - php: '7.1'
             laravel: '6'
@@ -22,14 +22,22 @@ jobs:
             laravel: '8'
           - php: '7.1'
             laravel: '9'
+          - php: '7.1'
+            laravel: '10'
           - php: '7.2'
             laravel: '8'
           - php: '7.2'
             laravel: '9'
+          - php: '7.2'
+            laravel: '10'
           - php: '7.3'
             laravel: '9'
+          - php: '7.3'
+            laravel: '10'
           - php: '7.4'
             laravel: '9'
+          - php: '7.4'
+            laravel: '10'
           - php: '8.0'
             laravel: '5.5'
           - php: '8.0'
@@ -38,6 +46,8 @@ jobs:
             laravel: '5.7'
           - php: '8.0'
             laravel: '5.8'
+          - php: '8.0'
+            laravel: '10'
           - php: '8.1'
             laravel: '5.5'
           - php: '8.1'
@@ -128,6 +138,14 @@ jobs:
           max_attempts: 5
           command: composer require "laravel/framework:9.*" "phpunit/phpunit:^9.5.12" --no-update --no-interaction
         if: "matrix.laravel == '9'"
+
+      - name: Select Laravel 10
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer require "laravel/framework:10.*" "phpunit/phpunit:^10.0" --no-update --no-interaction
+        if: "matrix.laravel == '10'"  
 
       - name: Install PHP Dependencies
         uses: nick-invision/retry@v2
